@@ -1,5 +1,9 @@
 2013-10-04  Alan Modra  <amodra@gmail.com>
 
+	* sysdeps/unix/sysv/linux/powerpc/bits/sigstack.h: New file.
+
+2013-10-04  Alan Modra  <amodra@gmail.com>
+
 	* sysdeps/unix/sysv/linux/powerpc/powerpc32/makecontext.S: Use
 	conditional form of branch and link when obtaining pc.
 	* sysdeps/unix/sysv/linux/powerpc/powerpc64/makecontext.S: Likewise.
